# dto_derive

./: .editorconfig  .travis.yml  Cargo.toml  LICENSE  README.md  old.rs
src/: container.rs  dto_info.rs  entity.rs  expand.rs  helpers.rs  lib.rs  mapping.rs  parse.rs  spanned.rs
src/expand/: expand_request.rs  expand_response.rs
src/parse/: entity_struct_attr.rs  map_struct_attr.rs  request_struct_attr.rs  response_struct_attr.rs  skip_struct_attr.rs
tests/: compiletest.rs  dto_derive_advanced.rs  dto_derive_map_attr.rs  dto_derive_map_nested_fields.rs  dto_derive_req_res_attr.rs  dto_derive_simple.rs  dto_derive_skip_attr.rs
tests/ui-fail/: dto_derive_entity_attr.rs  dto_derive_entity_attr.stderr  dto_derive_expected_struct.rs  dto_derive_expected_struct.stderr  dto_derive_map_attr.rs  dto_derive_map_attr.stderr  dto_derive_req_res_attr.rs  dto_derive_req_res_attr.stderr  dto_derive_skip_attr.rs  dto_derive_skip_attr.stderr  dto_derive_wo_entity_attr.rs  dto_derive_wo_entity_attr.stderr  dto_derive_wo_req_res_attr.rs  dto_derive_wo_req_res_attr.stderr
