[package]
name = "dto_derive"
description = """
Derive for automatic mapping DTOs to Entities and vice versa.
"""
version = "0.1.0"
authors = ["Michał Blinkiewicz <michal.blinkiewicz@gmail.com>"]
repository = "https://github.com/mb1986/dto_derive"
readme = "README.md"
license = "MIT"
keywords = ["dto", "data", "transfer", "entity", "derive"]
categories = ["data-structures", "web-programming", "rust-patterns"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "0.4" }
syn = { version = "0.15", features = ["full", "extra-traits"] }
quote = "0.6"

[dev-dependencies]
compiletest_rs = { version = "0.3.19", features = ["stable"] }
